# ClaudeGauge

./: .gitignore  LICENSE  README.md  config.example.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_NOTES_v0.1.0.md
public/fonts/: README.md
scripts/: ccgauge.cmd
src/: main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: config.rs  main.rs  usage.rs
